# z-ai-playground-v2

./: .gitignore  README.md  config.py  main.py  pyproject.toml
examples/: __init__.py
examples/01_llm/: __init__.py  basic_chat.py  multi_turn_chat.py  streaming_chat.py  thinking_mode.py
examples/02_vlm/: __init__.py  image_understanding.py  multi_image_analysis.py  object_detection.py  video_understanding.py
examples/03_image/: __init__.py  cogview4_generation.py
examples/04_video/: __init__.py  image_to_video.py  start_end_frame.py  text_to_video.py
examples/05_audio/: __init__.py  audio_transcription.py  streaming_transcription.py
examples/06_capabilities/: __init__.py  function_calling.py  structured_output.py
examples/07_tools/: __init__.py  web_search_api.py  web_search_chat.py
examples/08_agents/: __init__.py  multi_function_agent.py
http_examples/: __init__.py  chat_completion.py  image_generation.py  video_generation.py
utils/: __init__.py  client.py
